name:               aviation-cessna172-weight-balance
version:            0.0.1
license:            OtherLicense
license-file:       LICENSE
author:             Tony Morris <ʇǝu˙sıɹɹoɯʇ@ןןǝʞsɐɥ>, Joshua Morris <ɯoɔ˙lᴉɐɯƃ@llǝʞsɐɥ+sᴉɹɹoɯuɥoɾɐnɥsoɾ>
maintainer:         Tony Morris, Joshua Morris
copyright:          Copyright (c) 2017, Commonwealth Scientific and Industrial Research Organisation (CSIRO) ABN 41 687 119 230.
synopsis:           Weight and Balance for the Cessna 172 aircraft in aviation.
category:           Aviation
description:        
  <<http://i.imgur.com/EOnccMT.png>>
  .
  Weight and Balance for the Cessna 172 aircraft in aviation.

homepage:           https://github.com/data61/aviation-cessna172-weight-balance
bug-reports:        https://github.com/data61/aviation-cessna172-weight-balance/issues
cabal-version:      >= 1.10
build-type:         Simple
extra-source-files: changelog

source-repository   head
  type:             git
  location:         git@github.com:data61/aviation-cessna172-weight-balance.git

library
  default-language:
                    Haskell2010

  build-depends:
                    base >= 4.8 && < 4.13
                    , lens >= 4.15 && < 4.18
                    , aviation-units >= 0.0.1 && < 0.1
                    , aviation-weight-balance >= 0.0.1 && < 0.1
                    
  ghc-options:
                    -Wall

  hs-source-dirs:
                    src

  exposed-modules:
                    Data.Aviation.C172.WB
                    Data.Aviation.C172.WB.C172AircraftArms
                    Data.Aviation.C172.WB.C172Arms
                    Data.Aviation.C172.WB.C172MomentEnvelope
